# finsight

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  ROADMAP.md  config.example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  errors.py  logging.py  pipeline.py  server.py
app/cache/: semantic_cache.py  verification_store.py
app/models/: generator.py  reranker.py  retriever.py  rewriter.py  verifier.py
app/security/: output_validator.py
evaluation/: bootstrap_ground_truth.py  evaluate.py  ground_truth.json  metrics.py  models.py  questions_draft.json
indexing/: index_documents.py  preprocessing.py  utils.py
scripts/: diagnose_prefetch_v2.py  setup_runpod.sh
tests/: conftest.py  test_config.py  test_errors.py  test_evaluation.py  test_generator.py  test_index_documents.py  test_output_validator.py  test_pipeline.py  test_preprocessing.py  test_reranker.py  test_retriever_twostage.py  test_rewriter.py  test_semantic_cache.py  test_server.py  test_utils.py  test_verification_store.py  test_verifier.py
