[project]
name = "multimodal-rag-finance"
version = "1.0.0"
description = "Visual RAG system for financial document analysis"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # function call in default argument (FastAPI Depends pattern)
    "UP007",   # X | Y union syntax (keep Optional for readability)
]

[tool.ruff.lint.per-file-ignores]
"indexing/index_documents.py" = ["E402"]  # sys.path manipulation before imports

[tool.ruff.lint.isort]
known-first-party = ["app", "indexing"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too noisy with Anthropic SDK + Qdrant returning Any
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "colpali_engine.*",
    "qdrant_client.*",
    "fitz",
    "pdf2image",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.generator",
    "app.models.verifier",
    "app.models.rewriter",
    "indexing.index_documents",
]
# Anthropic SDK returns complex union types for content blocks
# and uses TypedDict with strict typing that clashes with our dict construction
disable_error_code = ["typeddict-item", "union-attr", "dict-item"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests that require model loading or API calls",
    "gpu: marks tests that require GPU",
    "integration: marks end-to-end integration tests",
]

[tool.coverage.run]
source = ["app", "indexing"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 25  # TODO: raise to 70% after integration tests
show_missing = true
